--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csrf",
+  "name": "@fastify/csrf",
   "description": "primary logic behind csrf tokens",
   "version": "3.1.0",
   "author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
@@ -9,23 +9,22 @@
   "license": "MIT",
   "repository": "pillarjs/csrf",
   "dependencies": {
-    "rndm": "1.2.0",
-    "tsscmp": "1.0.6",
-    "uid-safe": "2.1.5"
+    "rndm": "^1.2.0",
+    "tsscmp": "^1.0.6",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
-    "beautify-benchmark": "0.2.4",
-    "benchmark": "2.1.4",
-    "bluebird": "3.7.2",
-    "eslint": "7.17.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-markdown": "1.0.2",
-    "eslint-plugin-node": "10.0.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.1.0",
-    "mocha": "8.2.0",
-    "nyc": "14.1.1"
+    "beautify-benchmark": "^0.2.4",
+    "benchmark": "^2.1.4",
+    "bluebird": "^3.7.2",
+    "eslint": "^7.17.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-markdown": "^2.0.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "mocha": "^8.2.0",
+    "nyc": "^15.0.0"
   },
   "files": [
     "LICENSE",
