--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "version": "4.0.0",
   "author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
   "contributors": [
-    "Douglas Christopher Wilson <doug@somethingdoug.com>"
+    "Douglas Christopher Wilson <doug@somethingdoug.com>",
+    "Matteo Collina <hello@matteocollina.com"
   ],
   "license": "MIT",
-  "repository": "pillarjs/csrf",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fastify/csrf.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fastify/csrf/issues"
+  },
+  "homepage": "https://github.com/fastify/csrf#readme",
   "dependencies": {
     "rndm": "^1.2.0",
     "tsscmp": "^1.0.6",
@@ -34,7 +42,7 @@
     "index.js"
   ],
   "engines": {
-    "node": ">= 0.8"
+    "node": ">= 10.0"
   },
   "scripts": {
     "bench": "node benchmark/index.js",
