--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "mocha": "^10.0.0",
-    "nyc": "^15.0.0",
+    "tap": "^16.3.0",
     "tsd": "^0.22.0"
   },
   "types": "types/index.d.ts",
@@ -40,7 +39,7 @@
     "bench": "node benchmark/index.js",
     "lint": "eslint --plugin markdown --ext js,md .",
     "test": "npm run test:unit && npm run test:types",
-    "test:unit": "mocha --trace-deprecation --reporter spec --bail --check-leaks test/",
+    "test:unit": "tap",
     "test-ci": "nyc --reporter=text npm run test:unit",
     "test-cov": "nyc --reporter=html --reporter=text npm test:unit",
     "test:types": "tsd"
