--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "6.2.0",
   "author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
   "main": "index.js",
+  "type": "commonjs",
   "types": "types/index.d.ts",
   "contributors": [
     "Douglas Christopher Wilson <doug@somethingdoug.com>",
