--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fastify/csrf",
   "description": "primary logic behind csrf tokens",
-  "version": "7.0.0-pre.fv5.1",
+  "version": "7.0.0",
   "author": "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
   "main": "index.js",
   "type": "commonjs",
