chore(package): add funding
Signed-off-by: Frazer Smith <frazer.dev@icloud.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
   "types": "types/index.d.ts",
   "contributors": [
     "Douglas Christopher Wilson <doug@somethingdoug.com>",
-    "Matteo Collina <hello@matteocollina.com"
+    "Matteo Collina <hello@matteocollina.com",
+    {
+      "name": "Manuel Spigolon",
+      "email": "behemoth89@gmail.com"
+    },
+    {
+      "name": "Frazer Smith",
+      "email": "frazer.dev@icloud.com",
+      "url": "https://github.com/fdawgs"
+    }
   ],
   "license": "MIT",
   "repository": {
@@ -19,6 +28,16 @@
     "url": "https://github.com/fastify/csrf/issues"
   },
   "homepage": "https://github.com/fastify/csrf#readme",
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/fastify"
+    },
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/fastify"
+    }
+  ],
   "scripts": {
     "bench": "node benchmark/index.js",
     "lint": "eslint",
