--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "test": "npm run test:unit && npm run test:typescript",
-    "test:unit": "tap",
+    "test:unit": "node --test",
     "test:typescript": "tsd"
   },
   "devDependencies": {
@@ -52,7 +52,6 @@
     "benchmark": "^2.1.4",
     "eslint": "^9.17.0",
     "neostandard": "^0.12.0",
-    "tap": "^18.7.1",
     "tsd": "^0.31.0"
   },
   "keywords": [
