--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "test": "npm run test:unit && npm run test:typescript",
-    "test:unit": "tap",
+    "test:unit": "c8 --100 node --test",
     "test:typescript": "tsd"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "beautify-benchmark": "^0.2.4",
     "benchmark": "^2.1.4",
+    "c8": "^10.1.3",
     "eslint": "^9.17.0",
     "neostandard": "^0.12.0",
-    "tap": "^18.7.1",
     "tsd": "^0.31.0"
   },
   "keywords": [
